deployment_nginx/deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: symfony-demo
spec:
  revisionHistoryLimit: 2
  template:
    metadata:
      labels:
        app: symfony-demo
    spec:
      containers:
      - name: fpm
        image: php:7.2-fpm
        volumeMounts:
          - mountPath: /var/www
            name: symfony-demo-code
        command:
          - /bin/sh
          - -c
        args:
          - "chown -R www-data:www-data /var/www/html/var && php-fpm"
      - name: nginx
        image: nginx:latest
        volumeMounts:
          - mountPath: /etc/nginx/conf.d
            name: symfony-demo-nginx-config
          - mountPath: /var/www
            name: symfony-demo-code
        livenessProbe:
          httpGet:
            path: /
            port: 80
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /
            port: 80
          timeoutSeconds: 1
      volumes:
        - name: symfony-demo-code
          emptyDir: {}
        - name: symfony-demo-nginx-config
          configMap:
            name: symfony-demo-nginx-config
      imagePullSecrets:
      - name: regcred
