deployment_nginx/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: symfony-demo
spec:
  ports:
  -
    name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: symfony-demo
