deployment_nginx/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: symfony-demo
  annotations:
    certmanager.k8s.io/cluster-issuer:  letsencrypt-prod
spec:
  tls:
  - hosts:
    - symfony-demo.k8s.bastianhofmann.de
    secretName: symfony-demo-secret
  rules:
  - host: symfony-demo.k8s.bastianhofmann.de
    http:
      paths:
      - path: /
        backend:
          serviceName: symfony-demo
          servicePort: 80
